# esp32s3_chat_badge

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_en.md  SECURITY.md  THIRD_PARTY_NOTICES.md  sdkconfig.defaults
components/78__esp-wifi-connect/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml  wifi_configuration_ap.cc
components/78__esp-wifi-connect/assets/international/: wifi_configuration.html  wifi_configuration_done.html
components/78__esp-wifi-connect/assets/vn/: wifi_configuration.html  wifi_configuration_done.html
components/doit_min_program_upload/: CMakeLists.txt  Kconfig.projbuild  doit_nvs.c  idf_component.yml
components/doit_min_program_upload/ble/: doit_ble.c  gap.c  gatt_svc.c
components/doit_min_program_upload/file/: doit_decode.c  doit_file.c  doit_ui.c  file_download.c  img_decode.c  vpg_decode.c
components/doit_min_program_upload/include/ble/: ble_common.h  doit_ble.h  gap.h  gatt_svc.h
components/doit_min_program_upload/include/file/: doit_decode.h  doit_file.h  doit_nvs.h  doit_ui.h  file_common.h  file_download.h  img_decode.h  vpg_decode.h
components/vb6824/: CMakeLists.txt  idf_component.yml  vb6824.c  vb6824.h
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  custom_ota.cc  custom_ota.h  idf_component.yml  link.lf  ota.cc  ota.h  stt_simplified_to_traditional.h  system_info.cc
main/assets/locales/en-US/: here.p3
main/assets_overrides/en-US/: language.json
main/assets_overrides/vi-VN/: language.json
main/assets_overrides/zh-CN/: language.json
main/assets_overrides/zh-TW/: language.json
main/audio/: audio_codec.cc  audio_service.cc  audio_service.h
main/audio/codecs/: vb6824_audio_codec.cc  vb6824_audio_codec.h
main/audio/processors/: no_audio_processor.cc
main/audio/wake_words/: custom_wake_word.cc
main/boards/: README.md
main/boards/common/: afsk_demod.cc  board.cc  board.h  button.cc  power_save_timer.h  wifi_board.cc  wifi_board.h  wifi_board_c_api.h
main/boards/esp32s3-chat-badge/: CMakeLists.txt  README.md  config.h  esp32s3_chat_badge.cc  esp_lcd_jd9855.c  esp_lcd_jd9855.h  esp_lcd_touch_cst816d.c  esp_lcd_touch_cst816d.h  power_manager.h  sdkconfig.defaults  zw_sdcard.c  zw_sdcard.h
main/display/: CMakeLists.txt  chat_background.c  chat_background.h  cl_ui.c  cl_ui.h  cl_ui_event.c  cl_ui_event.h  lcd_display.cc  lcd_display.h  ui_tool.cc  ui_tool.h
main/display/assert/: language.h
main/display/assert/eye/anger/: eye_anger_exit_00.c  eye_anger_exit_01.c  eye_anger_exit_02.c  eye_anger_exit_03.c  eye_anger_exit_04.c  eye_anger_exit_05.c  eye_anger_exit_06.c  eye_anger_exit_07.c  eye_anger_exit_08.c  eye_anger_loop00.c  eye_anger_loop01.c  eye_anger_loop02.c  eye_anger_loop03.c  eye_anger_loop04.c  eye_anger_loop05.c  eye_anger_loop06.c  eye_anger_loop07.c  eye_anger_loop08.c  eye_anger_loop09.c  eye_anger_loop10.c  eye_anger_loop11.c
main/display/assert/eye/buxue/: eye_buxue_00.c  eye_buxue_01.c  eye_buxue_02.c  eye_buxue_03.c  eye_buxue_04.c  eye_buxue_05.c  eye_buxue_06.c  eye_buxue_07.c  eye_buxue_08.c  eye_buxue_09.c  eye_buxue_10.c  eye_buxue_12.c  eye_buxue_13.c  eye_buxue_15.c  eye_buxue_27.c  eye_buxue_28.c  eye_buxue_29.c  eye_buxue_30.c  eye_buxue_31.c
main/display/assert/eye/happy/: eye_happy_01.c  eye_happy_03.c  eye_happy_04.c  eye_happy_05.c  eye_happy_06.c  eye_happy_07.c  eye_happy_09.c  eye_happy_10.c  eye_happy_11.c  eye_happy_12.c  eye_happy_13.c  eye_happy_14.c  eye_happy_15.c  eye_happy_17.c  eye_happy_27.c  eye_happy_28.c  eye_happy_29.c  eye_happy_30.c  eye_happy_31.c
main/display/assert/eye/sad/: eye_sad_exit_00.c  (+24 more)
main/display/assert/font/: font_gotham_64_4.c  font_hello_32_4.c  font_init.c  font_puhui_ascii_80_4.c  font_puhui_num_32_4.c
main/display/assert/icon/: bat_empty.c  bottom_btn.c  icn_routine.c  icon_about_32.c  icon_ai_32.c  icon_alarm_32.c  icon_back.c  icon_bat_empty.c  icon_bright_24.c  icon_bt_disconnect_18.c  icon_connect.c  icon_delete_64.c  icon_dhcp_dis.c  icon_help_32.c  icon_mic.c  icon_power_32.c  icon_right.c  icon_setting_32.c  icon_speak.c  icon_sys_rst.c  icon_ukey_80.c  icon_upload_80.c  icon_upload_video_80.c  icon_video_32.c  icon_voice_32.c  icon_vol_24.c
main/display/assert/my/: logo.c
main/display/lv_vpg/: lv_vpg.c  lv_vpg.h  lv_vpg_private.h
main/display/page/about/: pg_about.c  pg_about.h  vm_about.c  vm_about.h
main/display/page/ai/: ac_ai_anim.c  pg_ai.c  pg_ai.h  vw_ai.c  vw_ai.h
main/display/page/alarm/: add.c  pg_alarm.c  pg_alarm.h  vw_alarm.c  vw_alarm.h
main/display/page/alarm_ring/: pg_alarm_ring.c  pg_alarm_ring.h  vw_alarm_ring.c  vw_alarm_ring.h
main/display/page/animation/: pg_animation.c  pg_animation.h  vm_animation.c  vm_animation.h
main/display/page/app_list/: pg_app_list.c  pg_app_list.h  vw_app_list.c  vw_app_list.h
main/display/page/help/: pg_help.c  pg_help.h  vm_help.c  vm_help.h
main/display/page/home/: pg_home.c  pg_home.h  vw_home.c  vw_home.h
main/display/page/music/: pg_music.c  pg_music.h  vw_music.c  vw_music.h
main/display/page/setting/: pg_setting.c  pg_setting.h  vm_setting.c  vm_setting.h
main/display/page/setting_sleep/: pg_setsleeping.c  pg_setsleeping.h  vm_setsleeping.c  vm_setsleeping.h
main/display/page/startup/: pg_startup.c  pg_startup.h  vw_startup.c  vw_startup.h
main/display/page/test/: pg_test.c  pg_test.h  vw_test.c  vw_test.h
main/display/page/usb_mode/: pg_usb_mode.c  pg_usb_mode.h  vm_usb_mode.c  vm_usb_mode.h
main/display/page/wifi_config/: pg_wifi_config.c  pg_wifi_config.h  vm_wifi_config.c  vm_wifi_config.h
main/display/page_manager/inc/: page_base.h  page_config.h  page_manager.h  page_manager_private.h
main/display/page_manager/src/: page_anim.c  page_base.c  page_drag.c  page_manager.c  page_router.c  page_state.c
main/iot/things/: custom_ota.cc
main/protocols/: mqtt_protocol.cc  mqtt_protocol.h  protocol.h  websocket_protocol.cc
main/services/alarm/: alarm_api.c  alarm_api.h  alarm_service.c  alarm_service.h  xiaozhi_alarm.c  xiaozhi_alarm.h
(+67 files in other folders)
